deploy-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: benoitbad/projet-virtualisation-frontend:4
          imagePullPolicy: IfNotPresent
          name: frontend
      restartPolicy: Always
