front-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end-container
        image: benoitbad/projet-virtualisation-frontend:2
        imagePullPolicy: Always
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
        - name: back-end-container
          image: benoitbad/projet-virtualisation-backend:2
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  ports:
    - name: 
      targetPort:
      port: 4200
  type: NodePort
  selector:
    app: front-end
    type: LoadBalancer
---

apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  ports:
    - name:
      targetPort: 
      port: 5000
  type: NodePort
  selector:
    app: back-end
    type: LoadBalancer
