loadbalancing-backend.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
    - nodePort:
      port: 50000
      protocol: TCP
      targetPort: 5000
  selector:
    app: backend
  type: LoadBalancer
